--- a/Website/public/dashboard.html
+++ b/Website/public/dashboard.html
@@ -90,13 +90,21 @@
             </button>
 
             <button class="select-aside" onclick="window.location = 'index.html'">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                    class="icon icon-tabler icons-tabler-outline icon-tabler-logout">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <path d="M14 8v-2a2 2 0 0 0 -2 -2h-7a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h7a2 2 0 0 0 2 -2v-2" />
-                    <path d="M9 12h12l-3 -3" />
-                    <path d="M18 15l3 -3" />
+                <svg width="800px" height="800px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+
+                    <g id="SVGRepo_bgCarrier" stroke-width="0" />
+
+                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" />
+
+                    <g id="SVGRepo_iconCarrier">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M9.70725 2.4087C9 3.03569 9 4.18259 9 6.4764V17.5236C9 19.8174 9 20.9643 9.70725 21.5913C10.4145 22.2183 11.4955 22.0297 13.6576 21.6526L15.9864 21.2465C18.3809 20.8288 19.5781 20.62 20.2891 19.7417C21 18.8635 21 17.5933 21 15.0529V8.94711C21 6.40671 21 5.13652 20.2891 4.25826C19.5781 3.37999 18.3809 3.17118 15.9864 2.75354L13.6576 2.34736C11.4955 1.97026 10.4145 1.78171 9.70725 2.4087ZM12 10.1686C12.4142 10.1686 12.75 10.52 12.75 10.9535V13.0465C12.75 13.48 12.4142 13.8314 12 13.8314C11.5858 13.8314 11.25 13.48 11.25 13.0465V10.9535C11.25 10.52 11.5858 10.1686 12 10.1686Z"
+                            fill="#000" />
+                        <path
+                            d="M7.54717 4.5C5.48889 4.503 4.41599 4.54826 3.73223 5.23202C3 5.96425 3 7.14276 3 9.49979V14.4998C3 16.8568 3 18.0353 3.73223 18.7676C4.41599 19.4513 5.48889 19.4966 7.54717 19.4996C7.49985 18.8763 7.49992 18.1557 7.50001 17.3768V6.6227C7.49992 5.84388 7.49985 5.1233 7.54717 4.5Z"
+                            fill="#000" />
+                    </g>
+
                 </svg>
                 <div class="caixa">
                     <p>Sair</p>
@@ -112,9 +120,9 @@
                     <div class="textoGrafico">
                         <h3>Porcentagem do público</h3>
                         <p>Masculino</p>
-                        <span>5</span>
+                        <span id="qnt_masculino">2</span>
                         <p>Feminino</p>
-                        <span>3</span>
+                        <span id="qnt_feminino">3</span>
                     </div>
                 </div>
 
@@ -123,9 +131,9 @@
                     <div class="textoGrafico">
                         <h3>Porcentagem de usuario que responderam o quiz</h3>
                         <p>Usuarios</p>
-                        <span>10</span>
+                        <span id="qnt_responderam">10</span>
                         <p>Usuarios Quiz</p>
-                        <span>20</span>
+                        <span id="qnt_nao_responderam">20</span>
                     </div>
                 </div>
             </div>
@@ -355,6 +363,7 @@
             .then(dashs => {
                 dashs.forEach(dados => {
                     feminino = dados.feminino
+                    qnt_feminino.innerHTML = feminino
 
                 });
             })
@@ -374,6 +383,7 @@
             .then(dashs => {
                 dashs.forEach(dados => {
                     masculino = dados.masculino
+                    qnt_masculino.innerHTML = masculino
                 });
             })
             .catch(error => {
@@ -438,7 +448,7 @@
             .then(dashs => {
                 dashs.forEach(dados => {
                     realizou = dados.realizados;
-
+                    qnt_responderam.innerHTML = realizou
 
                 });
             })
@@ -458,6 +468,8 @@
             .then(dashs => {
                 dashs.forEach(dados => {
                     naoRealizou = (dados.usuarios) - realizou;
+
+                    qnt_nao_responderam.innerHTML = dados.usuarios
 
                 });
             })
