atualização das models da dashboard

--- a/Website/public/quizes.html
+++ b/Website/public/quizes.html
@@ -224,45 +224,190 @@
     const listaDeQuestoes2 = [
 
         {
-            pergunta: " teste1?",
-            alternativaA: "Janeiro",
-            alternativaB: "Dezembro",
-            alternativaC: "Junho",
-            alternativaD: "Agosto",
+            pergunta: "Quem foi o primeiro campeão mundial oficial de xadrez reconhecido pela FIDE?",
+            alternativaA: "Garry Kasparov",
+            alternativaB: "Wilhelm Steinitz",
+            alternativaC: "Emanuel Lasker",
+            alternativaD: "Bobby Fischer",
+            alternativaCorreta: "alternativaB"
+        },
+
+        {
+            pergunta: "Em que ano Bobby Fischer derrotou Boris Spassky para se tornar campeão mundial?",
+            alternativaA: "1966",
+            alternativaB: "1969",
+            alternativaC: "1972",
+            alternativaD: "1975",
             alternativaCorreta: "alternativaC"
         },
 
         {
-            pergunta: "Quantas horas ",
-            alternativaA: "30 horas",
-            alternativaB: "38 horas",
-            alternativaC: "48 horas",
-            alternativaD: "24 horas",
-            alternativaCorreta: "alternativaD"
+            pergunta: "Qual desses campeões é conhecido por seu estilo agressivo e criativo?",
+            alternativaA: "Anatoly Karpov",
+            alternativaB: "Magnus Carlsen",
+            alternativaC: "Garry Kasparov",
+            alternativaD: "Vladimir Kramnik",
+            alternativaCorreta: "alternativaC"
+        },
+
+        {
+            pergunta: "Quem tirou o título de campeão mundial de Garry Kasparov em 2000?",
+            alternativaA: "Kramnik",
+            alternativaB: "Anand",
+            alternativaC: "Topalov",
+            alternativaD: "Leko",
+            alternativaCorreta: "alternativaA"
+        },
+
+        {
+            pergunta: "Qual desses campeões mundiais é norueguês?",
+            alternativaA: "Kramnik",
+            alternativaB: "Magnus Carlsen",
+            alternativaC: "Caruana",
+            alternativaD: "Spassky",
+            alternativaCorreta: "alternativaB"
+        },
+
+        {
+            pergunta: "A famosa partida 'O Jogo do Século', jogada por Fischer aos 13 anos, foi contra:",
+            alternativaA: "Boris Spassky",
+            alternativaB: "Donald Byrne",
+            alternativaC: "Paul Morphy",
+            alternativaD: "Bent Larsen",
+            alternativaCorreta: "alternativaB"
+        },
+
+        {
+            pergunta: "José Raúl Capablanca era natural de qual país?",
+            alternativaA: "México",
+            alternativaB: "Argentina",
+            alternativaC: "Cuba",
+            alternativaD: "Espanha",
+            alternativaCorreta: "alternativaC"
+        },
+
+        {
+            pergunta: "Qual foi o principal rival de Karpov durante os anos 1980?",
+            alternativaA: "Bobby Fischer",
+            alternativaB: "Tigran Petrosian",
+            alternativaC: "Garry Kasparov",
+            alternativaD: "Magnus Carlsen",
+            alternativaCorreta: "alternativaC"
+        },
+
+        {
+            pergunta: "Em qual país nasceu o campeão mundial Viswanathan Anand?",
+            alternativaA: "Sri Lanka",
+            alternativaB: "Índia",
+            alternativaC: "Paquistão",
+            alternativaD: "Nepal",
+            alternativaCorreta: "alternativaB"
+        },
+
+        {
+            pergunta: "A final do Campeonato Mundial de 2021 foi entre Magnus Carlsen e:",
+            alternativaA: "Ian Nepomniachtchi",
+            alternativaB: "Ding Liren",
+            alternativaC: "Hikaru Nakamura",
+            alternativaD: "Wesley So",
+            alternativaCorreta: "alternativaA"
         }
-    ]
+    ];
 
     const listaDeQuestoes3 = [
 
         {
-            pergunta: "teste",
-            alternativaA: "Janeiro",
-            alternativaB: "Dezembro",
-            alternativaC: "Junho",
-            alternativaD: "Agosto",
+            pergunta: "Qual é a sequência inicial da Defesa Siciliana?",
+            alternativaA: "1.e4 e5",
+            alternativaB: "1.e4 c5",
+            alternativaC: "1.d4 d5",
+            alternativaD: "1.c4 e5",
+            alternativaCorreta: "alternativaB"
+        },
+
+        {
+            pergunta: "O Gambito da Dama começa com qual sequência de lances?",
+            alternativaA: "1.e4 e5 2.Nf3 Nc6",
+            alternativaB: "1.d4 d5 2.c4",
+            alternativaC: "1.e4 c6",
+            alternativaD: "1.Nf3 d5 2.g3",
+            alternativaCorreta: "alternativaB"
+        },
+
+        {
+            pergunta: "Qual é o principal objetivo do lance ...e5 nas aberturas para as pretas?",
+            alternativaA: "Fortalecer o flanco da dama",
+            alternativaB: "Liberar o bispo de casas brancas",
+            alternativaC: "Atacar o rei adversário",
+            alternativaD: "Evitar o roque",
+            alternativaCorreta: "alternativaB"
+        },
+
+        {
+            pergunta: "A 'cravada' é uma tática em que:",
+            alternativaA: "O rei é colocado em xeque duplo",
+            alternativaB: "Uma peça não pode se mover sem expor uma peça mais valiosa",
+            alternativaC: "Se sacrifica a dama",
+            alternativaD: "Se promove um peão",
+            alternativaCorreta: "alternativaB"
+        },
+
+        {
+            pergunta: "A Defesa Caro-Kann começa com:",
+            alternativaA: "1.e4 e5",
+            alternativaB: "1.e4 c6",
+            alternativaC: "1.d4 Nf6",
+            alternativaD: "1.c4 c5",
+            alternativaCorreta: "alternativaB"
+        },
+
+        {
+            pergunta: "O termo 'garfo' no xadrez refere-se a:",
+            alternativaA: "Um xeque com dois peões",
+            alternativaB: "Um lance que captura duas torres",
+            alternativaC: "Um ataque duplo com uma peça",
+            alternativaD: "Um sacrifício posicional",
             alternativaCorreta: "alternativaC"
         },
 
         {
-            pergunta: "Quantas horas tem em um dia?",
-            alternativaA: "30 horas",
-            alternativaB: "38 horas",
-            alternativaC: "48 horas",
-            alternativaD: "24 horas",
-            alternativaCorreta: "alternativaD"
+            pergunta: "A abertura Ruy Lopez também é conhecida como:",
+            alternativaA: "Abertura Italiana",
+            alternativaB: "Abertura Espanhola",
+            alternativaC: "Defesa Francesa",
+            alternativaD: "Abertura Inglesa",
+            alternativaCorreta: "alternativaB"
+        },
+
+        {
+            pergunta: "Qual peça geralmente executa o 'raio-x' em uma tática de ataque?",
+            alternativaA: "Cavalo",
+            alternativaB: "Torre",
+            alternativaC: "Rei",
+            alternativaD: "Peão",
+            alternativaCorreta: "alternativaB"
+        },
+
+        {
+            pergunta: "Em finais de torre, qual fator é mais importante?",
+            alternativaA: "Número de peças capturadas",
+            alternativaB: "Domínio da diagonal",
+            alternativaC: "Atividade da torre e rei centralizado",
+            alternativaD: "Trocar todas as peças possíveis",
+            alternativaCorreta: "alternativaC"
+        },
+
+        {
+            pergunta: "O conceito de 'zugzwang' significa:",
+            alternativaA: "Ataque surpresa com peões",
+            alternativaB: "Situação em que qualquer lance piora a posição",
+            alternativaC: "Xeque-mate inevitável",
+            alternativaD: "Controle das casas centrais",
+            alternativaCorreta: "alternativaB"
         }
-    ]
-    
+    ];
+
+
     // variáveis globais    
     var idusuario = sessionStorage.ID_USUARIO
     let numeroDaQuestaoAtual = 0
@@ -373,7 +518,6 @@
         if (numeroDaQuestaoAtual < quantidadeDeQuestoes - 1) {
             preencherHTMLcomQuestaoAtual(numeroDaQuestaoAtual)
         } else if (numeroDaQuestaoAtual == quantidadeDeQuestoes - 1) {
-            alert("Atenção... a próxima é a ultima questão!")
             preencherHTMLcomQuestaoAtual(numeroDaQuestaoAtual)
         } else {
             finalizarJogo()
@@ -533,7 +677,7 @@
 
                 historicos.forEach(historico => {
                     container.innerHTML += `<div class="dados">
-                            <span class="historicoQuiz">${historico.idQuiz}</span>
+                            <span class="historicoQuiz">${historico.idquiz}</span>
                             <span class="historicoAcertos">${historico.acertos}</span>
                             <span class="historicoErros">${historico.erros}</span>
                             <span class="historicoTempo">${historico.tempo}</span>
